--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,1 +1,9 @@
-<h1>Facebook</h1>
+<h1 class="title">Contact Me</h1>
+<div id="contact">
+    <a href="http://www.facebook.com/lilard"><img class = "contactimage" src="/images/facebook.png"></a>
+		<a href="http://www.twitter.com/lilyfromseattle"><img class = "contactimage" src="/images/twitter.png"></a>
+		<a href="http://www.linkedin.com/pub/dir/Lily/Pace"><img class = "contactimage" src="/images/linkedin.png"></a>
+		<a href="http://www.instagram.com/lilyfromseattle"><img class = "contactimage" src="/images/instagram.png"></a>
+		<a href="http://www.github.com/lilyfromseattle"><img class = "contactimage" src="/images/github.png"></a>
+		<a href="mailto:lilyfpace@gmail.com"><img class = "contactimage" src="/images/gmail.png"></a>
+</div>
