--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,4 @@
-<h1 id="name">Lily Pace</h1>
+<h1 class="name" id = "myname">Lily Pace</h1>
+<div class="circular" id="portrait">
+</div>
+<h1 class = "name" id="tagline">Art. Design. Code.</h1>
