--- a/views/posts/post-1.erb
+++ b/views/posts/post-1.erb
@@ -1,1 +1,3 @@
-<h1>This is a blog post</h1>
+<h1 class ="blogtitle">Blog Post</h1>
+<h2 class="blogdate">September 24, 2014</h2>
+<p class="post">This is a blog post</p>
