--- a/views/about_me.erb
+++ b/views/about_me.erb
@@ -1,5 +1,8 @@
-<h1>About Me</h1>
+<h1 class="title">About Me</h1>
+<!-- <div class="circular" id="about"> -->
+</div>
 <div class="post">
+
 <p>My name is Lily and I'm a student at the Ada Developer's Academy. Welcome to my website! I'm a Seattle native currently plunging headfirst into web design and code. I have a degree in Sociology from the University of Washington with a minor in Philosophy. I have a background in fine art and design of all kinds.
 
 I'm enjoying learning the basics of web development through tutorials like Chris Pine's Learn to Program, Learn Ruby the Hard Way, Team Treehouse, and Codecademy, as well as many others.</p>
