--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,11 +7,11 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about_me">About Me</a></li>
-        <li><a href="/posts/:blogtitle">Blog</a></li>
-        <li><a href="/contact">Contact</a></li>
+      <ul class = "navbar">
+        <li class="links"><a href="/">Home</a></li>
+        <li class="links"><a href="/about_me">About Me</a></li>
+        <li class="links"><a href="/posts">Blog</a></li>
+        <li class="links"><a href="/contact">Contact</a></li>
         <!-- <li><a></a></li> -->
       </ul>
   </nav>
