--- a/views/about_me.erb
+++ b/views/about_me.erb
@@ -1,7 +1,7 @@
 <h1 class="title">About Me</h1>
 <!-- <div class="circular" id="about"> -->
 </div>
-<div class="post">
+<div class="about">
 
 <p>My name is Lily and I'm a student at the Ada Developer's Academy. Welcome to my website! I'm a Seattle native currently plunging headfirst into web design and code. I have a degree in Sociology from the University of Washington with a minor in Philosophy. I have a background in fine art and design of all kinds.
 
