--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,42 @@
 <h1 class="name" id = "myname">Lily Pace</h1>
-<div class="circular" id="portrait">
-</div>
+<div class="circular" id="portrait"></div>
 <h1 class = "name" id="tagline">Art. Design. Code.</h1>
+
+<!-- ABOUT ME -->
+
+<!-- </div> -->
+<div class="about">
+    <div class="bio">
+    <!-- <div class="bio"> -->
+    <!-- <h1 id="aboutme">About Me</h1> -->
+    <!-- <div class="squarepic" id="about"></div> -->
+    <h1 id="aboutme">About Me</h1>
+    <!-- <div class="bio"> -->
+
+    <p>My name is Lily and I'm a student at the Ada Developer's Academy. Welcome to my website! I'm a Seattle native currently plunging headfirst into web design and code. I have a degree in Sociology from the University of Washington with a minor in Philosophy. I have a background in fine art and design of all kinds.
+
+    I'm enjoying learning the basics of web development through tutorials like Chris Pine's Learn to Program, Learn Ruby the Hard Way, Team Treehouse, and Codecademy, as well as many others.</p>
+
+    <p>Although I find all types of code to be facinating, I am especially drawn to in front-end web development. It gives me a chance to use my graphic design and art background to create dynamic, interactive sites.
+
+    I enjoy snowboarding, cooking, crossword puzzles, watching and quoting Arrested Development, and reading essays by David Sedaris. I love art and fashion. I am oil painter who specializes in realism, especially portraits. I love to experiment with sewing my own clothes.
+
+    I created this website using HTML and CSS. I used media queries to make a mobile nav, so it looks great on mobile phones as well as computers! This is my blog!</p>
+    </div>
+<div class="squarepic" id="about"></div>
+</div>
+
+<!-- CONTACT -->
+<!--
+<h1 class="title">Contact Me</h1> -->
+<div class="about">
+  <h1 class="title">Contact Me</h1>
+    <a href="http://www.facebook.com/lilard"><img class = "contactimage" src="/images/facebook.png"></a>
+    <a href="http://www.twitter.com/lilyfromseattle"><img class = "contactimage" src="/images/twitter.png"></a>
+    <a href="http://www.linkedin.com/pub/dir/Lily/Pace"><img class = "contactimage" src="/images/linkedin.png"></a>
+    <a href="http://www.instagram.com/lilyfromseattle"><img class = "contactimage" src="/images/instagram.png"></a>
+    <a href="http://www.github.com/lilyfromseattle"><img class = "contactimage" src="/images/github.png"></a>
+    <a href="mailto:lilyfpace@gmail.com"><img class = "contactimage" src="/images/gmail.png"></a>
+</div>
+
+<p id="byme">This website was created by Lily Pace.</p>
