--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <h1 class="name" id = "myname">Lily Pace</h1>
 <div class="circular" id="portrait"></div>
 <h1 class = "name" id="tagline">Art. Design. Code.</h1>
-
+<A NAME="allaboutme">
 <!-- ABOUT ME -->
 
 <!-- </div> -->
@@ -25,6 +25,7 @@
     </div>
 <div class="squarepic" id="about"></div>
 </div>
+<A NAME="contactme">
 
 <!-- CONTACT -->
 <!--
@@ -39,4 +40,4 @@
     <a href="mailto:lilyfpace@gmail.com"><img class = "contactimage" src="/images/gmail.png"></a>
 </div>
 
-<p id="byme">This website was created by Lily Pace.</p>
+<p id="byme">This website was created by Lily Pace using HTML, CSS, Ruby, and Sinatra.</p>
