--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,12 +6,14 @@
 
 <body>
   <header>
+    <a href="#" id="logo"></a>
     <nav>
+      <a href="#" id="menu-icon"></a>
       <ul class = "navbar">
         <li class="links"><a href="/">Home</a></li>
-        <li class="links"><a href="/about_me">About Me</a></li>
+        <li class="links"><a href="#allaboutme">About Me</a></li>
         <li class="links"><a href="/posts">Blog</a></li>
-        <li class="links"><a href="/contact">Contact</a></li>
+        <li class="links"><a href="#contactme">Contact</a></li>
         <!-- <li><a></a></li> -->
       </ul>
   </nav>
