--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,8 +49,8 @@ li a:hover {
 }
 nav {
 	/*text-align: center;*/
-  padding: 20px;
-	padding-top: 5px;
+  padding: 3%;
+	padding-top: 0;
 	padding-left: 0;
 	/*float: right;*/
 }
@@ -185,7 +185,7 @@ text-shadow: 1px 1px 2px grey;
   background-size: 100%;
   width: 100%;
   /*height: 20em;*/
-  height: 50%;
+  height: 70%;
   margin-bottom: 5%;
 }
 
@@ -218,8 +218,8 @@ text-shadow: 1px 1px 2px grey;
 .contactimage {
   width: 80px;
   height: 80px;
-  margin: .5% 1.5% .5% 2.5%;
-  padding: .5% 1.5% .5% .5%;
+  margin: .5% 1.5% 3% 2.5%;
+  padding: .5% 1.5% 3% .5%;
 
 }
 
@@ -227,8 +227,8 @@ text-shadow: 1px 1px 2px grey;
 .contactimage:hover {
   width: 80px;
   height: 80px;
-  margin: .5% 1.5% .5% 1.5%;
-  padding: .5% 1.5% .5% 1.5%;
+  margin: .5% 1.5% 2.5% 1.5%;
+  padding: .5% 1.5% 2.5% 1.5%;
   opacity: .6;
   /*width: 85px;
   height: 85px;*/
@@ -282,7 +282,7 @@ a:hover#menu-icon {
   width: 40px;
   height: 40px;
   background: 79C7C3 url('../images/menu-icon.png') center;
-  margin-top: 20%;
+  margin-top: 35%;
   margin-right: 0em;
   transition-duration: 1s;
   -webkit-duration: 1s;
@@ -313,9 +313,7 @@ a:hover#menu-icon {
 
 
    header {
-
     position: fixed;
-
   }
 
   nav {
@@ -341,7 +339,7 @@ a:hover#menu-icon {
     /*padding: 20px;*/
     padding-left: 10px;
     padding-right: 10px;
-    margin-right: 2px;
+    margin-right: 0px;
     padding-right: 10px;
     text-align: center;
     background: -webkit-linear-gradient(grey, black, grey);
@@ -355,8 +353,7 @@ a:hover#menu-icon {
   }
 
   nav li {
-
-    text-align: center;
+    /*text-align: center;*/
     width: 100%;
     padding: 10px 0;
     margin: 0;
@@ -369,4 +366,20 @@ a:hover#menu-icon {
 
   }
 
+  #about {
+    height: 50%;
+  }
+
+  .links {
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+  }
+
+}
+
+@media screen and (max-width: 568px) {
+
+  #about {
+    height: 30%;
+  }
 }
