--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0;">
 </head>
 
 <body>
