--- a/public/css/main.css
+++ b/public/css/main.css
@@ -299,7 +299,7 @@ a:hover#menu-icon {
   width: 100px;
   height: 40px;
   background: url(../images/logo3.png) no-repeat center;
-  display: block;
+  display: hidden;
 
 }
 /*MEDIA QUERIES*/
@@ -330,6 +330,12 @@ a:hover#menu-icon {
     width: 15em;
     height: 15em;
   }
+
+  #tagline {
+    margin-top: 0;
+    font-size: 2.5em;
+  }
+
 
   p {
     font-size: 1em;
