--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
       <a href="#" id="menu-icon"></a>
       <ul class = "navbar">
         <li class="links"><a href="/">Home</a></li>
-        <li class="links"><a href="#allaboutme">About Me</a></li>
+        <li class="links"><a href="#allaboutme">About</a></li>
         <li class="links"><a href="/posts">Blog</a></li>
         <li class="links"><a href="#contactme">Contact</a></li>
         <!-- <li><a></a></li> -->
