--- a/public/css/main.css
+++ b/public/css/main.css
@@ -366,7 +366,7 @@ a:hover#menu-icon {
     text-align: center;
     background: -webkit-linear-gradient(grey, black, grey);
     border: 5px solid #444;
-    right: 16px;
+    right: 0;
     top: 52px;
     width: 30%;
     border-radius: 4px 0 4px 4px;
