--- a/public/css/main.css
+++ b/public/css/main.css
@@ -354,7 +354,7 @@ a:hover#menu-icon {
     color: white;
   }
 
-  nav ul, nav:active ul {
+  nav ul, nav:hover ul {
 
     display: none;
     position: absolute;
