--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
 
 <body>
   <header>
-    <a href="#" id="logo"></a>
+    <a id="logo"></a>
     <nav>
       <a href="#" id="menu-icon"></a>
       <ul class = "navbar">
