--- a/public/css/main.css
+++ b/public/css/main.css
@@ -399,6 +399,10 @@ a:hover#menu-icon {
     margin: 0 0 0 0;
   }
 
+
+  .about {
+    margin-top: 15%;
+  }
 }
 
 @media screen and (max-width: 568px) {
