--- a/public/css/main.css
+++ b/public/css/main.css
@@ -338,8 +338,9 @@ a:hover#menu-icon {
 
 
   p {
-    font-size: 1em;
-    font-family: helvetica;
+    font-size: 1.75em;
+    font-family: 'Questrial';
+    text-shadow: 1px 1px 2px grey;
 
   }
 
