--- a/public/css/main.css
+++ b/public/css/main.css
@@ -338,7 +338,8 @@ a:hover#menu-icon {
 
 
   p {
-    font-size: 1.75em;
+    text-align: left;
+    font-size: 1.5em;
     font-family: 'Questrial';
     text-shadow: 1px 1px 2px grey;
 
